added new features

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Lobster&family=Roboto+Mono&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Acme&family=Climate+Crisis&family=Lobster&family=Roboto+Mono&family=Teko:wght@700&display=swap"
       rel="stylesheet"
     />
     <script
